--- a/style.css
+++ b/style.css
@@ -15,22 +15,22 @@ body{
 }
 
 #header{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+    position: relative;
     background-image: url(images/wallpaperflare.com_wallpaper\ \(1\).jpg);
     background-size: cover;
     background-position: center;
 }
 
 .container{
-    padding: 10px 7%;
+    padding: 1vw 3vw;
 }
 
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
     width: 100%;
 }
 
@@ -45,7 +45,7 @@ nav h2 span{
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin: 10px 16px;
 }
 
 nav ul li a{
@@ -72,13 +72,20 @@ nav ul li a:hover::after{
 }
 
 .header-text{
-    margin-top: 23%;
+    top: 59%;
     font-size: 25px;
+    position: absolute;
+    line-height: 26px;
 }
 
 .header-text h1{
-    font-size: 48px;
-    margin-top: 24px;
+    font-size: 36px;
+    margin-top: 22px;
+}
+
+.header-text h3{
+    font-size: 26px;
+    margin-top: 22px;
 }
 
 .header-text h1 span{
@@ -93,20 +100,21 @@ nav ul li a:hover::after{
     color: #ababab;
 }
 
-.row{
+.row {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 4%;
+    flex-wrap: wrap;
+    width: 100vw;
 }
 
 .about-col-1 img{
-    width:100%;
-    border-radius: 300px;
-    height: 80vh;
+    width: 30vmax;
+    border-radius: 200px
 }
 .about-col-2{
     flex-basis: 60%;
-    margin-top: 9%;
+    margin-top: 3%;
 }
 
 .sub-title{
@@ -309,6 +317,7 @@ nav ul li a:hover::after{
 
 .contact-left{
     flex-basis: 35%;
+    
 }
 
 .contact-right{
@@ -317,6 +326,7 @@ nav ul li a:hover::after{
 
 .contact-left p{
     margin-top: 30px;
+    display:flex;
 }
 
 .contact-left p i{
@@ -359,7 +369,7 @@ form input, form textarea{
     padding: 15px;
     margin: 15px 0;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     border-radius: 6px;
 }
 
@@ -380,16 +390,19 @@ nav .fa-solid{
     display: none;
 }
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:650px) {
     #header{
-        background-image: url(images);
-    }
-    .header-text{
-        margin-top: 100%;
-        font-size: 16px;
+        width: 100vw;
+        height: 90vh;
+        background-image: url(images/wallpaperflare.com_wallpaper\ \(1\).jpg);
+        background-size: cover;
+        background-position: center;
     }
     .header-text h1{
-        font-size: 30px;
+        font-size: 22px;
+    }
+    .header-text h3 {
+        font-size: 18px;
     }
     nav .fa-sharp{
         display: block;
@@ -428,10 +441,7 @@ nav .fa-solid{
         cursor: pointer;
     }
     .sub-title{
-        font-size: 40px;
-    }
-    .about-col-1,.about-col-2{
-        flex-basis: 100%;
+        font-size: 32px;
     }
     .about-col-1{
         margin-bottom: 30px;
@@ -443,9 +453,9 @@ nav .fa-solid{
         font-size: 16px;
         margin-right: 20px;
     }
-    .contact-left, .contact-right{
+    /* .contact-left, .contact-right{
         flex-basis: 100%;
-    }
+    } */
 
 }
 
@@ -467,9 +477,12 @@ nav .fa-solid{
     font-size: 40px;
     margin-bottom: 16px;
 }
-.about-col-2 p{
-    line-height: 22px;
-    font-size: 18px;
+.about-col-2 p {
+    color: white;
+    font-size: 1.8vw;
+    font-weight: 200;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
 }
 
 .services-list p{
@@ -482,10 +495,109 @@ nav .fa-solid{
     font-size: 20px;
     width: fit-content;
     border: 1.2px solid #ff004f;
-    padding: 6px 18px;
+    padding: 8px 16px;
     border-radius: 12px;
     text-decoration: none;
     color: #fff;
     font-weight: 550;
     transition: transform 0.5s;
+}
+
+@media only screen and (max-width:700px) {
+    .about-col-2 p {
+        color: white;
+        font-size: 16px;
+        font-weight: 300;
+        border-radius: 10px;
+        transition: background 0.5s, transform 0.5s;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    .about-col-1 {
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: center;
+    }
+    nav h2 {
+        font-size: 26px;
+    }
+}
+@media only screen and (max-width: 450px){
+.about-col-2 .tab-titles p {
+    font-size: 14px;
+    width: fit-content;
+    border: 1.2px solid rgb(255, 0, 79);
+    padding: 8px 16px;
+    border-radius: 12px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: 550;
+    transition: transform 0.5s ease 0s;
+}
+.header-text h1 {
+    font-size: 21px;
+}
+}
+
+
+@media only screen and (max-width: 750px){
+    .about-col-1,.about-col-2 {
+    flex-basis: 100%;
+}
+.about-col-2 {
+    font-size: 3vw;
+    text-align: center;
+}
+.about-col-1 {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+}
+.tab-titles {
+    display: flex;
+    margin: 20px 0 40px;
+    justify-content: center;
+}
+.about-col-2 h1 {
+    font-size: 25px;
+    margin-bottom: 16px;
+}
+.about-col-1 img {
+    width: 34vmax;
+    border-radius: 200px;
+}
+.about-col-2 .tab-titles p {
+    font-size: 15px;
+    width: fit-content;
+    border: 1.2px solid #ff004f;
+    padding: 8px 16px;
+    border-radius: 12px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 550;
+    transition: transform 0.5s;
+}
+}
+
+
+@media only screen and (max-width: 350px){
+.about-col-2 p {
+    color: white;
+    font-size: 10px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+.about-col-2 .tab-titles p {
+    font-size: 10px;
+    width: fit-content;
+    border: 1.2px solid #ff004f;
+    padding: 8px 16px;
+    border-radius: 12px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 550;
+    transition: transform 0.5s;
+}
 }
